--- a/index.html
+++ b/index.html
@@ -1,79 +1,148 @@
-
 <html>
-	<head>
-		<meta name="view" content="width=device-width, initial-scale=1.0" />
-		<script
-			src="https://unpkg.com/react@16/umd/react.development.js"
-			crossorigin
-		></script>
-		<script
-			src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
-			crossorigin
-		></script>
-		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
-		<script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
-		<script type="text/babel" src="app.js" defer></script>
-		<style>
-			body {
-				font-family: sans-serif;
-				color: black;
-			}
-			nav {
-				display: flex;
-				justify-content: space-around;
-			}
+  <head>
+    <meta name="view" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://unpkg.com/react@16/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
 
-			.selected {
-				background-color: tomato;
-				color: white;
-				padding: 0.25rem;
-				border-radius: 0.2rem;
-			}
+    <script type="text/babel"></script>
+    <style>
+      body {
+        font-family: sans-serif;
+        color: black;
+      }
+      nav {
+        display: flex;
+        justify-content: space-around;
+      }
 
-			#home {
-				padding: 10rem;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-			}
+      .selected {
+        background-color: tomato;
+        color: white;
+        padding: 0.25rem;
+        border-radius: 0.2rem;
+      }
 
-			#companiesPage {
-				display: flex;
-			}
+      #home {
+        padding: 10rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-			#companiesPage > ul {
-				list-style-type: none;
-				flex: 1;
-			}
+      #companiesPage {
+        display: flex;
+      }
 
-			#companiesPage > ul > li {
-				margin-bottom: 1rem;
-			}
+      #companiesPage > ul {
+        list-style-type: none;
+        flex: 1;
+      }
 
-			#companiesPage > div {
-				flex: 1;
-			}
+      #companiesPage > ul > li {
+        margin-bottom: 1rem;
+      }
 
-			.companyItem {
-				display: flex;
-				justify-content: space-between;
-				align-items: flex-end;
-				margin: 0.5rem 0;
-				border-bottom: solid 1px black;
-				padding: 0.5rem 0;
-			}
+      #companiesPage > div {
+        flex: 1;
+      }
 
-			.year {
-				background-color: tomato;
-				color: white;
-				padding: 0.5rem;
-				border-radius: 0.2rem;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="root"></div>
-	</body>
+      .companyItem {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin: 0.5rem 0;
+        border-bottom: solid 1px black;
+        padding: 0.5rem 0;
+      }
+
+      .year {
+        background-color: tomato;
+        color: white;
+        padding: 0.5rem;
+        border-radius: 0.2rem;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="text/babel">
+      const { Component } = React;
+      const API = "https://acme-users-api-rev.herokuapp.com/api";
+      const { render } = ReactDOM;
+      const { Switch, Link, Route, HashRouter, Redirect } = ReactRouterDOM;
+
+      const Companies = ({ companies }) => {
+        console.log(companies);
+        return (
+          <div>
+            <ul>
+              {companies.map(comp => {
+                return (
+                  <a href={comp.id}>
+                    <li>{comp.name}</li>
+                  </a>
+                );
+              })}
+            </ul>
+          </div>
+        );
+      };
+
+      const Nav = companies => {
+        console.log(companies);
+        return (
+          <nav>
+            <Link to="/companies">Companies </Link>
+          </nav>
+        );
+      };
+
+      class App extends Component {
+        constructor() {
+          super();
+          this.state = {
+            companies: []
+          };
+        }
+        componentDidMount() {
+          const p = axios.get(`${API}/companies`).then(res => {
+            //console.log(res.data);
+            return res.data;
+          });
+
+          p.then(data => {
+            //console.log(data);
+            this.setState({
+              companies: data
+            });
+          });
+        }
+
+        render() {
+          const { companies } = this.state;
+          // console.log(companies);
+          return (
+            <HashRouter>
+              <Nav companies={companies} />
+              <Route companies={companies} />
+              <Companies companies={companies} />
+              <Route companies={companies} />
+            </HashRouter>
+          );
+        }
+      }
+      const root = document.querySelector("#root");
+      render(<App />, root);
+    </script>
+  </body>
 </html>
